rm privacy data

--- a/fruit_price_crawler.ipynb
+++ b/fruit_price_crawler.ipynb
@@ -31,8 +31,8 @@
     "import jieba\n",
     "import jieba.analyse\n",
     "from pymongo import MongoClient\n",
-    "mongodb_atlas_account = \"adan7575\"\n",
-    "mongodb_atlas_password = \"adan7575\"\n",
+    "mongodb_atlas_account = \"accout\"\n",
+    "mongodb_atlas_password = \"password\"\n",
     "ss = requests.session()\n"
    ]
   },
@@ -2247,7 +2247,6 @@
    ],
    "source": [
     "# starting_id[5]\n",
-    "len(data)"
    ]
   },
   {
@@ -2261,7 +2260,6 @@
    },
    "outputs": [],
    "source": [
-    "data[0].keys()"
    ]
   },
   {
@@ -2275,8 +2273,6 @@
    },
    "outputs": [],
    "source": [
-    "for n in data:\n",
-    "    print(n['afa_id'])"
    ]
   },
   {
